--- a/epj2make/locale/zh_CN/LC_MESSAGES/epj2make.po
+++ b/epj2make/locale/zh_CN/LC_MESSAGES/epj2make.po
@@ -8,12 +8,13 @@ msgstr ""
 "Project-Id-Version: ecere\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-21 13:45+0800\n"
-"PO-Revision-Date: 2011-08-29 19:24+0800\n"
-"Last-Translator: lq <asdf@12.123>\n"
+"PO-Revision-Date: 2012-02-19 05:10+0900\n"
+"Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: ec <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Basepath: ..\\..\\..\n"
 
 #: .\sdk\epj2make\epj2make.ec:2
 #: .\sdk\epj2make\epj2make.ec:4
