--- a/documentor/locale/es_ES/LC_MESSAGES/documentor.po
+++ b/documentor/locale/es_ES/LC_MESSAGES/documentor.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: eCere Translation Project\n"
+"Project-Id-Version: eCere SDK\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Juan Sánchez Rangel <aldeacity@gmail.com>\n"
@@ -12,46 +12,15 @@ msgstr ""
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
-#: .\src\Documentor.ec:675
-msgid "<a name=Classes></a><H3>Classes</H3><br><br>\n"
-msgstr "<a name=Classes></a><H3>Clases</H3><br><br>\n"
-
-#: .\src\Documentor.ec:948
-msgid "<a name=Conversions></a><H3>Conversions</H3><br><br>\n"
-msgstr "<a name=Conversions></a><H3>Conversiones</H3><br><br>\n"
-
-#: .\src\Documentor.ec:750
-msgid "<a name=Definitions></a><H3>Definitions</H3><br><br>\n"
-msgstr "<a name=Definitions></a><H3>Definiciones</H3><br><br>\n"
-
-#: .\src\Documentor.ec:881
-msgid "<a name=EnumerationValues></a><H3>Enumeration Values</H3><br><br>\n"
-msgstr "<a name=EnumerationValues></a><H3>Valores de Enumeración</H3><br><br>\n"
-
-#: .\src\Documentor.ec:999
-msgid "<a name=Members></a><H3>Properties and Members</H3><br><br>\n"
-msgstr "<a name=Members></a><H3>Propiedades y Miembros</H3><br><br>\n"
-
-#: .\src\Documentor.ec:1091
-msgid "<a name=Methods></a><H3>Non-Virtual Methods</H3><br><br>\n"
-msgstr "<a name=Methods></a><H3>Métodos No-Virtuales</H3><br><br>\n"
-
-#: .\src\Documentor.ec:1053
-msgid "<a name=VirtualMethods></a><H3>Virtual Methods</H3><br><br>\n"
-msgstr "<a name=VirtualMethods></a><H3>Métodos Virtuales</H3><br><br>\n"
-
-#: .\src\Documentor.ec:1281
-#: .\src\Documentor.ec:1503
-msgid "<br><br><H3>Description</H3><br><br>\n"
-msgstr "<br><br><H3>Descripción</H3><br><br>\n"
-
-#: .\src\Documentor.ec:859
-msgid "<br><H3>Description</H3><br><br>\n"
-msgstr "<br><H3>Descripción</H3><br><br>\n"
-
 #: .\src\Documentor.ec:593
 msgid "<FONT FACE=\"Arial\" SIZE=\"6\">Module %s</FONT><br>\n"
 msgstr "<FONT FACE=\"Arial\" SIZE=\"6\">Módulo %s</FONT><br>\n"
+
+#: .\src\Documentor.ec:1146
+#: .\src\Documentor.ec:1395
+#: .\src\Documentor.ec:1615
+msgid "<FONT face=\"Courier New\">\n"
+msgstr "<FONT face=\"Courier New\">\n"
 
 #: .\src\Documentor.ec:1197
 msgid "<H3>Derived Classes</H3><br>\n"
@@ -110,11 +79,46 @@ msgstr ""
 msgid "<TD valign=top height=22 nowrap=1><B>Return Value</B></TD>\n"
 msgstr "<TD valign=top height=22 nowrap=1><B>Valor de Retorno</B></TD>\n"
 
-#: .\src\Documentor.ec:555
-#: .\src\Documentor.ec:2278
-#: .\src\Documentor.ec:2686
-msgid "[Add Text]"
-msgstr "[Añadir Texto]"
+#: .\src\Documentor.ec:675
+msgid "<a name=Classes></a><H3>Classes</H3><br><br>\n"
+msgstr "<a name=Classes></a><H3>Clases</H3><br><br>\n"
+
+#: .\src\Documentor.ec:948
+msgid "<a name=Conversions></a><H3>Conversions</H3><br><br>\n"
+msgstr "<a name=Conversions></a><H3>Conversiones</H3><br><br>\n"
+
+#: .\src\Documentor.ec:750
+msgid "<a name=Definitions></a><H3>Definitions</H3><br><br>\n"
+msgstr "<a name=Definitions></a><H3>Definiciones</H3><br><br>\n"
+
+#: .\src\Documentor.ec:881
+msgid "<a name=EnumerationValues></a><H3>Enumeration Values</H3><br><br>\n"
+msgstr "<a name=EnumerationValues></a><H3>Valores de Enumeración</H3><br><br>\n"
+
+#: .\src\Documentor.ec:715
+msgid "<a name=Functions></a><H3>Functions</H3><br><br>\n"
+msgstr "<a name=Funciones></a><H3>Funciones</H3><br><br>\n"
+
+#: .\src\Documentor.ec:999
+msgid "<a name=Members></a><H3>Properties and Members</H3><br><br>\n"
+msgstr "<a name=Members></a><H3>Propiedades y Miembros</H3><br><br>\n"
+
+#: .\src\Documentor.ec:1091
+msgid "<a name=Methods></a><H3>Non-Virtual Methods</H3><br><br>\n"
+msgstr "<a name=Methods></a><H3>Métodos No-Virtuales</H3><br><br>\n"
+
+#: .\src\Documentor.ec:1053
+msgid "<a name=VirtualMethods></a><H3>Virtual Methods</H3><br><br>\n"
+msgstr "<a name=VirtualMethods></a><H3>Métodos Virtuales</H3><br><br>\n"
+
+#: .\src\Documentor.ec:859
+msgid "<br><H3>Description</H3><br><br>\n"
+msgstr "<br><H3>Descripción</H3><br><br>\n"
+
+#: .\src\Documentor.ec:1281
+#: .\src\Documentor.ec:1503
+msgid "<br><br><H3>Description</H3><br><br>\n"
+msgstr "<br><br><H3>Descripción</H3><br><br>\n"
 
 #: .\src\Documentor.ec:1983
 msgid "API Documentation Browser"
@@ -165,14 +169,6 @@ msgstr "Definiciones"
 msgid "Documentation Path:"
 msgstr "Ruta de Documentación:"
 
-#: .\src\Documentor.ec:2002
-msgid "eC Shared Library files (*.dll, *.so, *.dylib)"
-msgstr "Archivos de Bibliotecas Compartidas de eC (*.dll, *.so, *.dylib)"
-
-#: .\src\Documentor.ec:2003
-msgid "eC Symbol files (*.sym)"
-msgstr "Archivos de Símbolos eC (*.sym)"
-
 #: .\src\Documentor.ec:820
 msgid "Enumeration"
 msgstr "Enumeración"
@@ -197,9 +193,25 @@ msgstr "Archivo"
 msgid "Functions"
 msgstr "Funciones"
 
+#: .\..\ide\src\IDESettings.ec:578
+msgid "GNU Compiler Collection (GCC) / GNU Make"
+msgstr "Colección de compiladores GNU (GCC) / GNU Make"
+
 #: .\src\Documentor.ec:1915
 msgid "Methods"
 msgstr "Métodos"
+
+#: .\..\ide\src\IDESettings.ec:581
+msgid "Microsoft Visual Studio 2005 (8.0) Compiler"
+msgstr "Compilador de Microsoft Visual Studio 2005 (8.0)"
+
+#: .\..\ide\src\IDESettings.ec:582
+msgid "Microsoft Visual Studio 2008 (9.0) Compiler"
+msgstr "Compilador de Microsoft Visual Studio 2008 (9.0)"
+
+#: .\..\ide\src\IDESettings.ec:584
+msgid "Microsoft Visual Studio 2010 (10.0) Compiler"
+msgstr "Compilador de Microsoft Visual Studio 2010 (10.0)"
 
 #: .\src\Documentor.ec:588
 #: .\src\Documentor.ec:808
@@ -225,6 +237,10 @@ msgstr "Abrir..."
 #: .\src\Documentor.ec:607
 msgid "Parent namespace: <a href=\"api://%08x\" style=\"text-decoration: none;\">%s</a><br>\n"
 msgstr "Espacio de Nombres Padre: <a href=\"api://%08x\" style=\"text-decoration: none;\">%s</a><br>\n"
+
+#: .\..\ide\src\IDESettings.ec:580
+msgid "Portable C Compiler / GNU Make"
+msgstr "Portable C Compiler / GNU Make"
 
 #: .\src\Documentor.ec:1934
 msgid "Properties"
@@ -254,14 +270,13 @@ msgstr "Configuración..."
 msgid "Structure"
 msgstr "Estructura"
 
-#: .\src\Documentor.ec:1267
-#: .\src\Documentor.ec:1489
-msgid "this pointer class: <a href=\"api://%08x\" style=\"text-decoration: none;\">%s</a><br>\n"
-msgstr "esta clase de puntero: <a href=\"api://%08x\" style=\"text-decoration: none;\">%s</a><br>\n"
+#: .\src\SettingsDialog.ec:20
+msgid "Tahoma"
+msgstr "Tahoma"
 
-#: .\src\Documentor.ec:1263
-msgid "this pointer class: None<br>\n"
-msgstr "esta clase de puntero: Ninguno<br>\n"
+#: .\..\ide\src\IDESettings.ec:579
+msgid "Tiny C Compiler / GNU Make"
+msgstr "Compilador Tiny C/ GNU Make"
 
 #: .\src\Documentor.ec:838
 msgid "Type: %s<br>\n"
@@ -274,4 +289,27 @@ msgstr "Unidad"
 #: .\src\Documentor.ec:1908
 msgid "Virtual Methods"
 msgstr "Métodos Virtuales"
+
+#: .\src\Documentor.ec:555
+#: .\src\Documentor.ec:2278
+#: .\src\Documentor.ec:2686
+msgid "[Add Text]"
+msgstr "[Añadir Texto]"
+
+#: .\src\Documentor.ec:2002
+msgid "eC Shared Library files (*.dll, *.so, *.dylib)"
+msgstr "Archivos de Bibliotecas Compartidas de eC (*.dll, *.so, *.dylib)"
+
+#: .\src\Documentor.ec:2003
+msgid "eC Symbol files (*.sym)"
+msgstr "Archivos de Símbolos eC (*.sym)"
+
+#: .\src\Documentor.ec:1267
+#: .\src\Documentor.ec:1489
+msgid "this pointer class: <a href=\"api://%08x\" style=\"text-decoration: none;\">%s</a><br>\n"
+msgstr "esta clase de puntero: <a href=\"api://%08x\" style=\"text-decoration: none;\">%s</a><br>\n"
+
+#: .\src\Documentor.ec:1263
+msgid "this pointer class: None<br>\n"
+msgstr "esta clase de puntero: Ninguno<br>\n"
 
