--- a/ecere/locale/es_ES/LC_MESSAGES/ecere.po
+++ b/ecere/locale/es_ES/LC_MESSAGES/ecere.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: eCere SDK\n"
+"Project-Id-Version: Ecere SDK\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Juan Sánchez Rangel <aldeacity@gmail.com>\n"
+"Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: Juan Sánchez\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11,6 +11,7 @@ msgstr ""
 "X-Poedit-Language: Spanish\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Basepath: ..\\..\\..\\\n"
 
 #: .\src\gui\dialogs\ReplaceDialog.ec:158
 #: .\src\gui\dialogs\ReplaceDialog.ec:350
@@ -315,7 +316,7 @@ msgstr "Exp"
 #: .\src\gui\controls\CalendarControl.ec:10
 msgctxt "Friday"
 msgid "F"
-msgstr "F"
+msgstr "V"
 
 #: .\src\sys\Date.ec:42
 msgid "Feb"
@@ -467,7 +468,7 @@ msgstr "Buscar en:"
 #: .\src\gui\controls\CalendarControl.ec:9
 msgctxt "Monday"
 msgid "M"
-msgstr "M"
+msgstr "L"
 
 #: .\src\sys\Date.ec:42
 msgid "Mar"
@@ -628,7 +629,7 @@ msgstr "S"
 #: .\src\gui\controls\CalendarControl.ec:9
 msgctxt "Sunday"
 msgid "S"
-msgstr "S"
+msgstr "D"
 
 #: .\src\sys\Date.ec:39
 msgid "Sat"
@@ -762,12 +763,12 @@ msgstr "Sistema"
 #: .\src\gui\controls\CalendarControl.ec:10
 msgctxt "Thursday"
 msgid "T"
-msgstr "T"
+msgstr "J"
 
 #: .\src\gui\controls\CalendarControl.ec:9
 msgctxt "Tuesday"
 msgid "T"
-msgstr "T"
+msgstr "M"
 
 #: .\src\gui\skins\WindowsSkin.ec:125
 #: .\src\gui\skins\WindowsSkin.ec:130
@@ -812,7 +813,7 @@ msgstr "Verdana"
 #: .\src\gui\controls\CalendarControl.ec:9
 msgctxt "Wednesday"
 msgid "W"
-msgstr "W"
+msgstr "M"
 
 #: .\src\sys\Date.ec:38
 msgid "Wed"
