--- a/compiler/ecs/locale/ecs.pot
+++ b/compiler/ecs/locale/ecs.pot
@@ -1,3 +1,14 @@
+msgid ""
+msgstr 
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Basepath: ..\\\n"
 #: .\ecs.ec:1704
 msgid "Syntax:\n   ecs [-t <target platform>] <input>[, <input>]* -o <output>\n"
 msgstr "Syntax:\n   ecs [-t <target platform>] <input>[, <input>]* -o <output>\n"
