--- a/ear/extract/locale/extract.pot
+++ b/ear/extract/locale/extract.pot
@@ -1,3 +1,15 @@
+msgid ""
+msgstr 
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Basepath: ..\\\n"
+
 #: .\extract.ec:142
 msgid "Browse..."
 msgstr "Browse..."
