--- a/ecere/locale/ecere.pot
+++ b/ecere/locale/ecere.pot
@@ -1,3 +1,15 @@
+msgid ""
+msgstr 
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Basepath: ..\\\n"
+
 #: .\src\gui\dialogs\ReplaceDialog.ec:158
 #: .\src\gui\dialogs\ReplaceDialog.ec:350
 msgid "%d occurences found, %d replaced"
@@ -755,6 +767,8 @@ msgid "T"
 msgctxt "Tuesday"
 msgstr "T"
 
+#: .\src\gui\skins\TVisionSkin.ec:37
+#: .\src\gui\skins\TVisionSkin.ec:43
 #: .\src\gui\skins\WindowsSkin.ec:125
 #: .\src\gui\skins\WindowsSkin.ec:130
 msgid "Tahoma"
@@ -852,10 +866,6 @@ msgstr "Yes"
 #: .\src\sys\System.ec:427
 msgid "\n\nWould you like to view the error log?"
 msgstr "\n\nWould you like to view the error log?"
-
-#: .\src\com\instance.ec:2281
-msgid "error: Redefinition of class %s\n"
-msgstr "error: Redefinition of class %s\n"
 
 #: .\src\sys\Date.ec:121
 #: .\src\sys\Time.ec:781
