--- a/documentor/locale/es_ES/LC_MESSAGES/documentor.po
+++ b/documentor/locale/es_ES/LC_MESSAGES/documentor.po
@@ -1,15 +1,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: eCere SDK\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: Juan Sánchez Rangel <aldeacity@gmail.com>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-02-20 13:01+0000\n"
+"PO-Revision-Date: 2012-02-21 17:51+0900\n"
+"Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: Juan Sánchez\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Spanish\n"
+"X-Launchpad-Export-Date: 2012-02-21 08:32+0000\n"
+"X-Generator: Launchpad (build 14838)\n"
 "X-Poedit-Country: SPAIN\n"
+"X-Poedit-Language: Spanish\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
 #: .\src\Documentor.ec:593
