--- a/ecere/locale/es_ES/LC_MESSAGES/ecere.po
+++ b/ecere/locale/es_ES/LC_MESSAGES/ecere.po
@@ -1,15 +1,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Ecere SDK\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-02-20 13:33+0000\n"
+"PO-Revision-Date: 2012-02-21 17:43+0900\n"
 "Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: Juan Sánchez\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Spanish\n"
+"X-Launchpad-Export-Date: 2012-02-21 08:32+0000\n"
+"X-Generator: Launchpad (build 14838)\n"
 "X-Poedit-Country: SPAIN\n"
+"X-Poedit-Language: Spanish\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Basepath: ..\\..\\..\\\n"
 
@@ -66,15 +69,15 @@ msgstr "Alt+"
 #: .\src\gui\Window.ec:9086
 #: .\src\gui\Window.ec:9373
 msgid "Appearance"
-msgstr "Appearance"
+msgstr "Aspecto"
 
 #: .\src\sys\Date.ec:42
 msgid "Apr"
-msgstr "Apr"
+msgstr "Abr"
 
 #: .\src\sys\Date.ec:33
 msgid "April"
-msgstr "April"
+msgstr "Abril"
 
 #: .\src\gui\dialogs\FileDialog.ec:1188
 msgid "As Type:"
@@ -82,7 +85,7 @@ msgstr "Tipo:"
 
 #: .\src\sys\Date.ec:42
 msgid "Aug"
-msgstr "Aug"
+msgstr "Ago"
 
 #: .\src\sys\Date.ec:33
 msgid "August"
@@ -160,7 +163,7 @@ msgstr "Agosto"
 #: .\src\gui\Window.ec:9112
 #: .\src\gui\Window.ec:9128
 msgid "Behavior"
-msgstr "Behavior"
+msgstr "Comportamiento"
 
 #: .\src\gui\dialogs\ColorPicker.ec:730
 #: .\src\gui\dialogs\FileDialog.ec:1263
@@ -176,15 +179,15 @@ msgstr "Cancelar"
 #: .\src\gui\dialogs\GoToDialog.ec:44
 #: .\src\gui\Window.ec:6614
 msgid "Close"
-msgstr "Close"
+msgstr "Cerrar"
 
 #: .\src\gui\FormDesigner.ec:833
 msgid "Control contains code. Delete anyways?"
-msgstr "Control contains code. Delete anyways?"
+msgstr "El control contiene código. ¿Eliminar de todos modos?"
 
 #: .\src\gui\FormDesigner.ec:849
 msgid "Control contains other controls. Delete control and children?"
-msgstr "Control contains other controls. Delete control and children?"
+msgstr "El control contiene otros controles. ¿Eliminar el control y sus hijos?"
 
 #: .\src\gui\controls\EditBox.ec:948
 #: .\src\gui\controls\EditBox.ec:3064
@@ -193,7 +196,7 @@ msgstr "Copiar\tCtrl+C"
 
 #: .\src\sys\System.ec:111
 msgid "Couldn't write to file"
-msgstr "Couldn't write to file"
+msgstr "Imposible escribir en el archivo"
 
 #: .\src\gui\dialogs\FileDialog.ec:1496
 msgid "Create Directory"
@@ -455,7 +458,7 @@ msgstr "Junio"
 #: .\src\gui\Window.ec:8617
 #: .\src\gui\Window.ec:9144
 msgid "Layout"
-msgstr "Layout"
+msgstr "Disposición"
 
 #: .\src\gui\dialogs\GoToDialog.ec:50
 msgid "Line number:"
@@ -481,7 +484,7 @@ msgstr "Marzo"
 #: .\src\gui\dialogs\FindDialog.ec:31
 #: .\src\gui\dialogs\ReplaceDialog.ec:229
 msgid "Match case"
-msgstr "Coincidir mayúsculas/minúsculas"
+msgstr "Distinguir mayúsculas/minúsculas"
 
 #: .\src\gui\Window.ec:6603
 msgid "Maximize"
@@ -546,7 +549,7 @@ msgstr "No existe la línea."
 
 #: .\src\sys\Date.ec:42
 msgid "Nov"
-msgstr "Ahora"
+msgstr "Nov"
 
 #: .\src\sys\Date.ec:33
 msgid "November"
@@ -746,7 +749,7 @@ msgstr "Tamaño"
 
 #: .\src\gui\Window.ec:6608
 msgid "Stay On Top"
-msgstr "Mantener arriba"
+msgstr "Poner Al Frente"
 
 #: .\src\sys\Date.ec:38
 msgid "Sun"
@@ -770,6 +773,8 @@ msgctxt "Tuesday"
 msgid "T"
 msgstr "M"
 
+#: .\src\gui\skins\TVisionSkin.ec:37
+#: .\src\gui\skins\TVisionSkin.ec:43
 #: .\src\gui\skins\WindowsSkin.ec:125
 #: .\src\gui\skins\WindowsSkin.ec:130
 msgid "Tahoma"
@@ -896,7 +901,3 @@ msgstr "mañana"
 msgid "yesterday"
 msgstr "ayer"
 
-#~ msgctxt "test"
-
-#~ msgid "OK"
-#~ msgstr "OK"
