--- a/epj2make/locale/es_ES/LC_MESSAGES/epj2make.po
+++ b/epj2make/locale/es_ES/LC_MESSAGES/epj2make.po
@@ -1,16 +1,99 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: eCere SDK\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: Juan Sánchez Rangel <aldeacity@gmail.com>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-02-20 13:01+0000\n"
+"PO-Revision-Date: 2012-02-21 17:58+0900\n"
+"Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: Juan Sánchez\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Spanish\n"
+"X-Launchpad-Export-Date: 2012-02-21 08:32+0000\n"
+"X-Generator: Launchpad (build 14838)\n"
 "X-Poedit-Country: SPAIN\n"
+"X-Poedit-Language: Spanish\n"
 "X-Poedit-SourceCharset: utf-8\n"
+
+#: .\epj2make.ec:232
+msgid "         [-cc <c compiler>]\n"
+msgstr "         [-cc <compilador de c>]\n"
+
+#: .\epj2make.ec:231
+msgid "         [-cpp <c preprocessor>]\n"
+msgstr "         [-cpp <preprocesador de c>]\n"
+
+#: .\epj2make.ec:243
+msgid "         [-d <intermediate objects directory>]\n"
+msgstr "         [-d <directorio intermedio de objetos>]\n"
+
+#: .\epj2make.ec:236
+msgid "         [-ear <Ecere Archiver>]\n"
+msgstr "         [-ear <Ecere Archiver>]\n"
+
+#: .\epj2make.ec:234
+msgid "         [-ecc <eC compiler>]\n"
+msgstr "         [-ecc <compilador de eC>]\n"
+
+#: .\epj2make.ec:233
+msgid "         [-ecp <eC preprocessor>]\n"
+msgstr "         [-ecp <preprocesador de eC>]\n"
+
+#: .\epj2make.ec:235
+msgid "         [-ecs <eC symbol generator>]\n"
+msgstr "         [-ecs <generador de símbolos de eC>]\n"
+
+#: .\epj2make.ec:238
+msgid "         [-i <include dir[;inc dir[...]]>]\n"
+msgstr "         [-i <include dir[;inc dir[...]]>]\n"
+
+#: .\epj2make.ec:244
+msgid "         [-includemk <include.mk path>]\n"
+msgstr "         [-includemk <include.mk path>]\n"
+
+#: .\epj2make.ec:239
+msgid "         [-l <library dir[;lib dir[...]]>]\n"
+msgstr "         [-l <dir. de bibliotecas[;lib dir[...]]>]\n"
+
+#: .\epj2make.ec:230
+msgid "         [-make <make tool>]\n"
+msgstr "         [-make <herramienta make>]\n"
+
+#: .\epj2make.ec:241
+msgid "         [-noglobalsettings]\n"
+msgstr "         [-noglobalsettings]\n"
+
+#: .\epj2make.ec:242
+msgid "         [-noresources]\n"
+msgstr "         [-noresources]\n"
+
+#: .\epj2make.ec:237
+msgid "      directories:\n"
+msgstr "      directorios:\n"
+
+#: .\epj2make.ec:240
+msgid "      options:\n"
+msgstr "      opciones:\n"
+
+#: .\epj2make.ec:229
+msgid "      toolchain:\n"
+msgstr "      herramientas:\n"
+
+#: .\epj2make.ec:228
+msgid "   epj2make [-t <target platform>] [-c <configuration>] [toolchain] [directories] [options] [-o <output>] <input>\n"
+msgstr "   epj2make [-t <plataforma de destino>] [-c <configuración>] [herrramientas] [directorios] [opciones] [-o <salida>] <entrada>\n"
+
+#: .\epj2make.ec:374
+msgid "Error: Input file (%s) does not exist.\n"
+msgstr "Error: El archivo de entrada (%s) no existe.\n"
+
+#: .\epj2make.ec:312
+msgid "Error: Project configuration (%s) was not found.\n"
+msgstr "Error: No se encontró la configuración del proyecto (%s).\n"
+
+#: .\epj2make.ec:370
+msgid "Error: Unable to open project file (%s) due to unknown error.\n"
+msgstr "Error: Imposible abrir el archivo de proyecto (%s) debido a un error desconocido.\n"
 
 #: .\..\ide\src\IDESettings.ec:578
 msgid "GNU Compiler Collection (GCC) / GNU Make"
@@ -28,11 +111,23 @@ msgstr "Compilador de Microsoft Visual Studio 2008 (9.0)"
 msgid "Microsoft Visual Studio 2010 (10.0) Compiler"
 msgstr "Compilador de Microsoft Visual Studio 2010 (10.0)"
 
+#: .\epj2make.ec:328
+msgid "Notice: Project configuration (%s) will be used.\n"
+msgstr "Aviso: Se utilizará la configuración del proyecto (%s).\n"
+
 #: .\..\ide\src\IDESettings.ec:580
 msgid "Portable C Compiler / GNU Make"
 msgstr "Portable C Compiler / GNU Make"
 
+#: .\epj2make.ec:227
+msgid "Syntax:\n"
+msgstr "Sintaxis:\n"
+
 #: .\..\ide\src\IDESettings.ec:579
 msgid "Tiny C Compiler / GNU Make"
 msgstr "Tiny C Compiler / GNU Make"
+
+#: .\epj2make.ec:206
+msgid "invalid option: %s\n"
+msgstr "opción no válida: %s\n"
 
