README: IRC web chat on next line

--- a/README
+++ b/README
@@ -59,4 +59,5 @@ descriptive info has been added yet.
 Git Repository @ http://github.com/ecere/sdk/  ( git://github.com/ecere/sdk.git )
 Support forums @ http://ecere.com/forums
 Bug tracker    @ http://ecere.com/mantis
-IRC            @ #ecere on irc.freenode.net ( http://webchat.freenode.net/?channels=ecere )
+IRC            @ #ecere on irc.freenode.net
+                ( http://webchat.freenode.net/?channels=ecere )
