--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 ecere-sdk (0.44.01-0ubuntu1) quantal; urgency=low
 
-  * Initial packing of Ecere SDK for Ubuntu.  (LP: #394998)
+  * Initial packing of Ecere SDK for Ubuntu/Debian.  (Closes: #665332) (LP: #394998)
 
- -- Jerome St-Louis <jerstlouis@gmail.com>  Mon, 13 Aug 2012 15:41:00 -0400
+ -- Jerome St-Louis <jerstlouis@gmail.com>  Tue, 14 Aug 2012 06:58:00 -0400
