Renamed source package back to ecere rather than ecere-sdk; Fixed line too long in changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ecere-sdk (0.44.01-0ubuntu1) quantal; urgency=low
+ecere (0.44.01-0ubuntu1) quantal; urgency=low
 
-  * Initial packing of Ecere SDK for Ubuntu/Debian.  (Closes: #665332) (LP: #394998)
+  * Initial packaging of Ecere SDK for Debian. (Closes: #665332, LP: #394998)
 
  -- Jerome St-Louis <jerstlouis@gmail.com>  Tue, 14 Aug 2012 06:58:00 -0400
