man pages: fixed mistake

--- a/share/man/man1/ecc.1
+++ b/share/man/man1/ecc.1
@@ -60,7 +60,7 @@ MemoryGuard can then be toggled by toggling the active configuration of the ecer
 .P
 \fB-nolinenumbers\fR
    Omit outputting eC source file line numbers in generated C file.
-.P
+.SS Understood C Flags
 \fB-I\fR\fIincludedir\fR
 .P
 \fB-isystem\fR|\fB-isysroot\fR \fIsysincludedir\fR
