--- a/share/man/man1/ecc.1
+++ b/share/man/man1/ecc.1
@@ -9,7 +9,7 @@ ecc [\fB-t\fR \fItarget-platform\fR]
     [\fB-strictns\fR]
     [\fB-memguard\fR]
     [\fB-nolinenumbers\fR]
-    [optional-C-flags]
+    [understood-C-flags]
     \fB-c\fR \fIinput\fR
     [\fB-o\fR \fIoutput\fR]
     [\fB-symbols\fR \fIintermediate-dir\fR]
