--- a/share/man/man1/ear.1
+++ b/share/man/man1/ear.1
@@ -19,7 +19,6 @@ ear \fIcommand\fR[\fIcommand-options\fR] \fIarchive\fR \fIrequired-parameters\fR
 \fBu\fR (Update)       \fIarchive\fR \fIinput-paths...\fR
  Add \fBw\fR (e.g. \fBaw\fR) for specifying an \fIarchive-dest-path\fR at the end
  Add \fBf\fR (e.g. \fBaf\fR) for packing the contents of folders \fIinput-paths\fR at the root of the archive    
-  (Bug: will crash if any of the \fIinput-paths\fR is a file instead of a folder)
 .RS 0
 \fBm\fR (Move)         \fIarchive\fR \fIarchive-src-paths...\fR \fIarchive-dest-path\fR
 .RS 0
@@ -59,3 +58,5 @@ Resources can be emdedded inside applications and modules from the Project View'
 .SS Miscellaneous Options
 .RS 0
 \fBq\fR  Quiet mode (Add, Refresh, Update, Extract and Extract All)
+.SH KNOWN BUGS
+When using the \fBf\fR command modifier (with Add, Refresh or Update), ear will crash if any of the \fIinput-paths\fR is a file instead of a folder
