man pages: tweaked ear.1

--- a/share/man/man1/ear.1
+++ b/share/man/man1/ear.1
@@ -9,7 +9,8 @@ ear \fIcommand\fR[\fIcommand-options\fR] \fIarchive\fR \fIrequired-parameters\fR
 \fBx\fR (Extract All)  \fIarchive\fR [\fIoutput-directory\fR]
 .RS 0
 \fBe\fR (Extract)      \fIarchive\fR \fIarchive-paths...\fR
-   \fBew\fR for specifying an \fIoutput-directory\fR at the end
+.RS 0
+\fBew\fR(Extract Where)\fIarchive\fR \fIarchive-paths...\fR \fIoutput-directory\fR
 .SS "Archiving/Cleanup Commands:"
 .RS 0
 \fBa\fR (Add)          \fIarchive\fR \fIinput-paths...\fR
