Makefile: Installing man pages, making tao.pdf optional; i18n: generating same .pot on unix/windows; epj2make: s/include.mk/crossplatform.mk

--- a/epj2make/locale/epj2make.pot
+++ b/epj2make/locale/epj2make.pot
@@ -43,8 +43,8 @@ msgid "         [-i <include dir[;inc dir[...]]>]\n"
 msgstr "         [-i <include dir[;inc dir[...]]>]\n"
 
 #: ./epj2make.ec:244
-msgid "         [-includemk <include.mk path>]\n"
-msgstr "         [-includemk <include.mk path>]\n"
+msgid "         [-includemk <crossplatform.mk path>]\n"
+msgstr "         [-includemk <crossplatform.mk path>]\n"
 
 #: ./epj2make.ec:239
 msgid "         [-l <library dir[;lib dir[...]]>]\n"
