--- a/NEWS
+++ b/NEWS
@@ -251,6 +251,8 @@ Ecere SDK 0.26 (1999) (v0)
    * CD Audio Playback
    * GUI CD Player
 ----------------------------------------
+Nova3D 3Dfx GLIDE Engine (1998)
+----------------------------------------
 DirectDraw WarCraft II Clone (1997-1998)
 
    * A*
