ecere/BMP loading: Worked around struct packing issue with GCC 4.7

--- a/NEWS
+++ b/NEWS
@@ -180,7 +180,7 @@ Ecere SDK 0.40 (September 27, 2006) (v3)
 ----------------------------------------
   ( Summer 2004 )
 
-  * ICQ/AIM Ecere Communitcator (eMessenger)
+  * ICQ/AIM Ecere Communicator (eMessenger)
   * The Dreamix Project - a set top box PVR
   * Python Bindings for Ecere
 ----------------------------------------
