NEWS: Updated for 0.44.02 release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Ecere SDK 0.44.02 (November 6, 2012)
+
+   * Fixed issue with 'arch: all' packages preventing installing on 64 bit system
+   * Fixed issue with GCC 4.7 whereas .bmp files would not load properly
+   * Fixed build issues with ARM and big endian (PPC) builds
+   * Various bug fixes
+   * Resolved target and host platform confusion in build system/makefiles
+   * Proper handling of __attribute__ in the compiler
+   * Resolved proper implementation of all per node settings in the build system
+   * Added support for a SYSROOT and GCC prefix in Compiler Settings
+   * Support for cross-compiling the tarball (e.g. Building for MinGW on Linux)
+   * Initial support for the Android platform
+----------------------------------------
 Ecere SDK 0.44.01 (August 2012)
 
    * Compiler Configurations Support for truly cross-compiler/platform makefiles
